--- a/notes/templates/notes/index.html
+++ b/notes/templates/notes/index.html
@@ -2,21 +2,73 @@
 {% load static %}
 
 {% block content %}
-<img src="{% static 'notes/img/logo-getit.png' %}"/>
-<p>Como o Post-it, mas com outro verbo</p>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Get-it</title>
 
-<form method="post">
-  {% csrf_token %}
-  <label for="titulo">Título</label>
-  <input id="titulo" type="text" name="titulo" />
-  <label for="detalhes">Detalhes</label>
-  <textarea id="detalhes" name="detalhes"></textarea>
-  <input type="submit" />
-</form>
+<link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="{% static 'notes/css/getit.css' %}" />
+    <script type="text/javascript" src="{% static 'notes/script/getit.js' %}"></script>
+</head>
+<body>
+<div class="appbar">
+  <img src="{% static 'notes/img/logo-getit.png' %}" class="logo"/>
+  <p class="subtitle">Como o Post-it, mas com outro verbo</p>
+</div>
 
-<ul>
-    {% for note in notes %}
-    <li>{{ note.title }} by {{ note.content }}</li>
-    {% endfor %}
+<main class="container">
+
+  <form method="post" class="form-card">
+    {% csrf_token %}
+    <input
+      class="form-card-title"
+      type="text"
+      name="titulo"
+      placeholder="Título"
+    />
+    <textarea
+      class="autoresize"
+      name="detalhes"
+      placeholder="Digite o conteúdo..."
+    ></textarea>
+    <button class="btn" type="submit">Criar</button>
+  </form>
+
+
+<ul class="card-container">
+  {% for note in notes %}
+  <div class="card">
+    <div class="first-row">
+      <h3 class="card-title">{{ note.title }}</h3>
+      <div style="display: flex; flex-direction: row;">
+        <a href="/edit/{{ note.id }}"><img src ="{% static 'notes/img/edit-icon.png' %}" class="imagem-edit"></a>
+        <a class="delete-button" href="/delete/{{ note.id }}"><img src="{% static 'notes/img/delete.png' %}" style="width: 1rem; height: 1rem; margin: 0.5rem;"></a>
+      </div>
+    </div>
+    <div class="card-content">
+      <p>
+      {{ note.content }}
+      </p>
+  </div>
+  </div>
+  {% endfor %}
 </ul>
+
+</main>
+
+</body>
+</html>
 {% endblock %}
