--- a/notes/static/notes/css/getit.css
+++ b/notes/static/notes/css/getit.css
@@ -72,6 +72,7 @@ body {
   box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.2), 0 6px 20px 0px rgba(0, 0, 0, 0.19);
   flex-direction: row;
   margin-top: 0.2%;
+  justify-content: space-between;
 }
 
 .subtitle {
@@ -257,5 +258,11 @@ body {
 .imagem-edit {
   width: 1rem;
   height: 1rem;
+  margin: 0.5rem;
+}
+
+.tag-image{
+  width: 2rem;
+  height: 2rem;
   margin: 0.5rem;
 }
