--- a/notes/templates/notes/index.html
+++ b/notes/templates/notes/index.html
@@ -2,31 +2,13 @@
 {% load static %}
 
 {% block content %}
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Get-it</title>
 
-<link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&family=Permanent+Marker&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="{% static 'notes/css/getit.css' %}" />
-    <script type="text/javascript" src="{% static 'notes/script/getit.js' %}"></script>
-</head>
-<body>
 <div class="appbar">
-  <img src="{% static 'notes/img/logo-getit.png' %}" class="logo"/>
-  <p class="subtitle">Como o Post-it, mas com outro verbo</p>
+  <div style="display: flex; flex-direction: row;">
+    <img src="{% static 'notes/img/logo-getit.png' %}" class="logo"/>
+    <p class="subtitle">Como o Post-it, mas com outro verbo</p>
+  </div>
+  <a href="/tags"><img src="{% static 'notes/img/tag.png' %}" style="width: 2rem; height: 2rem; padding: 1rem;"/></a>
 </div>
 
 <main class="container">
@@ -43,6 +25,11 @@
       class="autoresize"
       name="detalhes"
       placeholder="Digite o conteúdo..."
+    ></textarea>
+    <textarea
+      class="autoresize"
+      name="tagler"
+      placeholder="Digite a Tag (Separe tags diferentes por espaço)"
     ></textarea>
     <button class="btn" type="submit">Criar</button>
   </form>
@@ -69,6 +56,4 @@
 
 </main>
 
-</body>
-</html>
 {% endblock %}
