--- a/notes/templates/notes/index.html
+++ b/notes/templates/notes/index.html
@@ -49,7 +49,14 @@
       <p>
       {{ note.content }}
       </p>
-  </div>
+    </div>
+    <div class="tag-content">
+      {% for tag in note.tag_set.all %}
+        <p style="padding-right: 0.4rem;">
+        #{{ tag.name }} 
+        </p>
+      {% endfor %}
+    </div>
   </div>
   {% endfor %}
 </ul>
