--- a/notes/templates/notes/note_list.html
+++ b/notes/templates/notes/note_list.html
@@ -8,12 +8,15 @@
     <img src="{% static 'notes/img/logo-getit.png' %}" class="logo"/>
     <p class="subtitle">Como o Post-it, mas com outro verbo</p>
   </div>
-  <a href="/tags"><img src="{% static 'notes/img/tag.png' %}" style="width: 2rem; height: 2rem; padding: 1rem;"/></a>
+  <div style="display: flex; flex-direction: row;">
+    <a href="/"><img src="{% static 'notes/img/botao-de-inicio.png' %}" style="width: 2rem; height: 2rem; padding: 1rem;"/></a>
+    <a href="/tags"><img src="{% static 'notes/img/tag.png' %}" style="width: 2rem; height: 2rem; padding: 1rem;"/></a>
+  </div>
 </div>
 
 <main class="container">
 
-<ul class="card-container">
+<ul class="card-container" style = "padding-top: 1.5rem;">
   {% for note in notes %}
   <div class="card">
     <div class="first-row">
