--- a/notes/templates/notes/tags.html
+++ b/notes/templates/notes/tags.html
@@ -8,7 +8,10 @@
     <img src="{% static 'notes/img/logo-getit.png' %}" class="logo"/>
     <p class="subtitle">Como o Post-it, mas com outro verbo</p>
   </div>
-  <a href="/tags"><img src="{% static 'notes/img/tag.png' %}" style="width: 2rem; height: 2rem; padding: 1rem;"/></a>
+  <div style="display: flex; flex-direction: row;">
+    <a href="/"><img src="{% static 'notes/img/botao-de-inicio.png' %}" style="width: 2rem; height: 2rem; padding: 1rem;"/></a>
+    <a href="/tags"><img src="{% static 'notes/img/tag.png' %}" style="width: 2rem; height: 2rem; padding: 1rem;"/></a>
+  </div>
 </div>
 
 <main class="container">
