--- a/notes/templates/notes/index.html
+++ b/notes/templates/notes/index.html
@@ -8,56 +8,34 @@
     <img src="{% static 'notes/img/logo-getit.png' %}" class="logo"/>
     <p class="subtitle">Como o Post-it, mas com outro verbo</p>
   </div>
-  <a href="/tags"><img src="{% static 'notes/img/tag.png' %}" style="width: 2rem; height: 2rem; padding: 1rem;"/></a>
 </div>
 
 <main class="container">
 
-  <form method="post" class="form-card">
+  <form method="post" style="display: flex; flex-direction: row; padding-top: 3rem;">
     {% csrf_token %}
-    <input
-      class="form-card-title"
-      type="text"
-      name="titulo"
-      placeholder="Título"
-    />
-    <textarea
+    <p style="display: flex; flex-direction: row; align-items: center;">Memória:</p>
+    <textarea style="margin: 0.6rem;"
       class="autoresize"
       name="detalhes"
       placeholder="Digite o conteúdo..."
     ></textarea>
-    <textarea
-      class="autoresize"
-      name="tagler"
-      placeholder="Digite a Tag (Separe tags diferentes por espaço)"
-    ></textarea>
     <button class="btn" type="submit">Criar</button>
+    
   </form>
 
 
-<ul class="card-container">
+<ul style="padding: 2rem;" class="card-container">
   {% for note in notes %}
+  {% if forloop.last %} {# Check if it's the last iteration #}
   <div class="card">
-    <div class="first-row">
-      <h3 class="card-title">{{ note.title }}</h3>
-      <div style="display: flex; flex-direction: row;">
-        <a href="/edit/{{ note.id }}"><img src ="{% static 'notes/img/edit-icon.png' %}" class="imagem-edit"></a>
-        <a class="delete-button" href="/delete/{{ note.id }}"><img src="{% static 'notes/img/delete.png' %}" style="width: 1rem; height: 1rem; margin: 0.5rem;"></a>
-      </div>
-    </div>
     <div class="card-content">
       <p>
-      {{ note.content }}
+        {{ note.content }}
       </p>
     </div>
-    <div class="tag-content">
-      {% for tag in note.tag_set.all %}
-        <p style="padding-right: 0.4rem;">
-        #{{ tag.name }} 
-        </p>
-      {% endfor %}
-    </div>
   </div>
+  {% endif %}
   {% endfor %}
 </ul>
 
